# LUCK_UP

./: CMakeLists.txt  COOKED.c  Makefile  crap.c  crap.txt  fonction.c  fonction.h  jeu.c  jeu.h  main.c  main.c minimap  makefile  menu.c minimap  minimap  minimap01  prog  questions.txt
gameplay/include/: bullet.h  collision.h  enemy.h  game.h  player.h  utils.h  voiture.h
gameplay/src/: READ_MY_ASS_FOR_GOD_SAKE.md  bullet.c  collision.c  enemy.c  main.c  player.c  utils.c
src/code/Background/: background.c  background.h
src/code/Player/: player.c  player.h
src/code/audio /: audio.c  audio.h
src/code/button/: button.c  button.h
src/code/enemy/: enemy.c
src/code/game/: button.c  button.h  game.c  game.h
src/code/load_menus/: load_menus.c  load_menus.h
src/code/menu/: menu.c  menu.h
src/code/slider/: slider.c
src/code/tools/: tools.c  tools.h
